[tool.poetry]
name = "ycb"
version = "0.1.0"
description = "Automation tool to scrape badminton courts"
authors = ["Chester <chester.ong.ch@gmail.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
